# mihoyo-bbs-tools-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  RUST_REWRITE_GUIDE.md  flake.nix
.github/workflows/: ci.yml  container.yml  generate-lock.yml  lockfiles.yml  nix.yml  release.yml  scheduled-run.yml  tls-smoke.yml
config/: config.example.yaml
deploy/kubernetes/: README.md  cronjob.yaml
docs/: Cookie与故障处理.md  config-cli-improvement-plan.md  config-migration.md  configuration.md  security.md  size-optimization.md  使用说明.md  快速开始.md  报告与重试机制修改需求.md  用户体验优化方案.md
integrations/dacapo/: template.yml
src/: automation.rs  cli.rs  doctor.rs  error.rs  file_logging.rs  launcher.rs  lib.rs  main.rs  update.rs
src/auth/: client.rs  cookie.rs  credentials.rs  mod.rs
src/bbs/: client.rs  mod.rs  model.rs
src/captcha/: mod.rs
src/checkin/: china.rs  games.rs  hoyolab.rs  mod.rs  response.rs
src/cloud_game/: mod.rs
src/config/: dacapo.rs  editor.rs  input.rs  interactive.rs  legacy.rs  mod.rs
src/config/fixtures/: legacy_v11.yaml  legacy_v15.yaml
src/http/: client.rs  mod.rs
src/push/: mod.rs  smtp.rs  windows_toast.rs
src/service/: batch.rs  bbs_runner.rs  cloud_runner.rs  credential_refresh.rs  mod.rs  qinglong.rs  report.rs  runner.rs  runtime_delay.rs  scheduler.rs  web_activity_runner.rs
src/signing/: ds.rs  mod.rs
tests/: tls_smoke.rs
