[package]
name = "mihoyo-bbs-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "社区维护的米游社与 HoYoLAB 自动任务工具"
repository = "https://github.com/bcmdy/mihoyo-bbs-tools-rs"
rust-version = "1.85"

[[bin]]
name = "mihoyo-bbs-tools"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
md-5 = "0.10"
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "socks"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.0", features = ["v3"] }

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.6"

[profile.release]
lto = "thin"
strip = true
