[package]
name = "mihoyo-bbs-tools"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "社区维护的米游社与 HoYoLAB 自动任务工具"
repository = "https://github.com/bcmdy/mihoyo-bbs-tools-rs"
rust-version = "1.85"

[[bin]]
name = "MihoyoBBSToolsRS"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
md-5 = "0.10"
hmac = "0.12"
lettre = { version = "=0.11.22", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query", "rustls-no-provider", "socks"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.0", features = ["v3"] }

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
